2019-01-10: Version 2.0.0, support multiple abbreviations for basics and calculations measurement endpoints, and use OAuth2 authentication mode by default
2019-01-16: Add specific energy yield forecast endpoint
2019-07-16: Add isActive property to stringbox abbreviation endpoint, activeOnly to stringbox bulk endpoint and abbreviations filter to all bulk endpoints
2019-07-16: Implement OAuth token cache
2019-11-27: Add virtual-meters
2019-12-04: Add trackers endpoint
2020-03-31: Add new property simulationMethod to SystemDetail model
2020-07-02: Add picture meta in ticket attachment
2020-12-10: Enable cmms endpoints
2021-02-09: Add simulation endpoint
2021-06-02: Declare return type
2022-01-13: Add cause property for ticket and ability to manipulate ticket cause
2022-02-23: Add forecast endpoint
2022-04-20: Add ability to manipulate ticket fieldService property
2022-08-31: Add environmental-savings endpoints
2022-11-30: Add startedAt property for Alarm
2022-12-08: Add Yield lose endpoints
2023-03-21: Add new property DueDate to work order
2023-09-07: Add satellite irradiance endpoint
2023-10-04: Add endpoints with different power control sources for yield loss calculation
2023-10-31: Remove the yield loss calculation endpoints that didn't specify the power control sources
2023-12-25: Add kpi targets endpoints
2023-12-27: Support the yield loss calculation formulas defined by Bundesnetzagentur in 2020 and deprecate the 2017 formulas
2024-01-10: Add category parameter to the forecast endpoint
2024-01-25: Apply /v2 to login path
2024-04-10: Implement the replace action for all yield loss calculation endpoints
2024-06-12: Add ticket outage endpoints
2024-06-30: Remove the deprecated yield loss calculation endpoints that use the 2017 formulas
2024-07-25: Add single alarm endpoints
2024-08-01: Add new calculation options for yield losses