@@ -1,0 +1,10 @@
+<?php
+
+namespace meteocontrol\vcomapi\model;
+
+use DateTime;
+
+class LastDataInput extends BaseModel {
+    /** @var DateTime|null */
+    public $timestamp;
+}
